Noteworthy changes in version 1.0.7
------------------------------------------------

 * Detect overflow while parsing OIDs.


Noteworthy changes in version 1.0.6 (2009-06-05)
------------------------------------------------

 * Support SHA-{384,512} based signature generation.

 * The RSA algorithmIdentifier ASN.1 sequence is now emitted with an
   explicit NULL parameter.  Despite the interop testing we did in the
   past, some software still requires this and thus we better follow
   the best current practise.


Noteworthy changes in version 1.0.5 (2009-01-09)
------------------------------------------------

 * Minor bug fixes.


Noteworthy changes in version 1.0.4 (2008-09-22)
------------------------------------------------

 * Write smimeCapabilities according to RFC3851 to help Mozilla.

 * Support DSA.

 * The visibility attribute is now used if supported by the toolchain.


Noteworthy changes in version 1.0.3 (2008-02-12)
------------------------------------------------

 * Minor bug fixes.

 * Include the used hash algorithm in sig-val structures.

 * Fix for unknown tags in issuerAltName and subjectAltName.


Noteworthy changes in version 1.0.2 (2007-07-04)
------------------------------------------------
 
 * Support for SHA-2.

 * Fixed a couple of memory leaks.

 * Experimental support for ECDSA.

 * Minor portability fixes.

 * Switched to GPLv3.


Noteworthy changes in version 1.0.1 (2006-11-29)
------------------------------------------------

 * Fixes for certificates lacking certain objects.

 * Fixes to allow building on systems with a broken ar.


Noteworthy changes in version 1.0.0 (2006-08-31)
------------------------------------------------

 * OCSP nonces are now checked to detect replay attacks.

 * OCSP extensions may no be retrieved.

 * Implemented ksba_ocsp_get_responder_id which used to always return
   an error code not_implemented.  Thus we can assume that the
   function has never been used and we don't need to see this as an