@@ -1,3 +1,8 @@
+2009-07-01  Werner Koch  <wk@g10code.com>
+
+	* dn.c (oid_name_tbl): Add dotted string representation of OIDs.
+	(append_atv): Try to match BER encoded OIDs.
+
 2009-06-29  Werner Koch  <wk@g10code.com>
 
 	* oid.c (ksba_oid_to_str): Add an overflow check so that we can
