@@ -1,7 +1,8 @@
 Noteworthy changes in version 1.0.7
 ------------------------------------------------
 
- * Detect overflow while parsing OIDs.
+ * Detect overflow while parsing OIDs.  Map BER encoded OIDs to well
+   known names.
 
 
 Noteworthy changes in version 1.0.6 (2009-06-05)
